# convergio-org

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-org/: Cargo.toml
crates/convergio-org/src/: ext.rs  factory.rs  factory_builders.rs  factory_builders_domain.rs  factory_builders_keywords.rs  factory_builders_knowledge.rs  factory_builders_mission.rs  factory_builders_names.rs  factory_types.rs  kb_seed.rs  lib.rs  mcp_defs.rs  onboard.rs  onboard_catalog.rs  onboard_dotfiles.rs  org_knowledge.rs  org_skills.rs  orgchart.rs  project_scanner.rs  provisioner.rs  repo_scanner.rs  repo_scanner_helpers.rs  role_dispatcher.rs  role_dispatcher_tests.rs  routes.rs  routes_ask.rs  routes_ask_audit.rs  routes_ask_vector.rs  routes_decisions.rs  routes_members.rs  routes_notify.rs  routes_projects.rs  routes_telemetry.rs  service_requests.rs  telegram.rs  tests.rs  tests_onboard.rs  tests_project_scanner.rs  validation.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md  ADR-030-auto-org.md
