[workspace]
resolver = "2"
members = ["crates/convergio-org"]

[workspace.package]
version = "0.1.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-org"

[workspace.dependencies]
# SDK dependencies (crates.io)
convergio-types = "0.1.6"
convergio-db = "0.1.6"

# Common deps — pin same versions as SDK for compatibility
thiserror = "1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
