[package]
name = "convergio-org"
description = "Org chart, inter-org communication, provisioner"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository = "https://github.com/Roberdan/convergio-org"
readme = "../../README.md"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
axum = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
